# tech-lunchs

./: .gitignore  README.md
cpp11-move-semantics/: Box.cpp  Box.h  CMakeLists.txt  Cat.cpp  Cat.h  MemoryBlock.cpp  MemoryBlock.h  MovableMemoryBlock.cpp  MovableMemoryBlock.h  README.md  main.cpp
